# deepfilter-rt

./: .gitignore  API.md  ARCHITECTURE-thoughts.md  ARCHITECTURE.md  Cargo.toml  MODES.md  ONNX_RUNTIME_ANDROID_SETUP.md  README.md  STATEFUL_ONNX.md  build.rs  compare_all_models.py  compare_streaming.py
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/deepfilter_rt/: all.html  constant.DEFAULT_NORM_ALPHA.html  constant.DF_ORDER.html  constant.FFT_SIZE.html  constant.FREQ_SIZE.html  constant.HOP_SIZE.html  constant.MAX_DB_DF_THRESH.html  constant.MAX_DB_ERB_THRESH.html  constant.MIN_DB_THRESH.html  constant.NB_DF.html  constant.NB_ERB.html  constant.SAMPLE_RATE.html  enum.DfError.html  enum.ModelVariant.html  index.html  sidebar-items.js  struct.DeepFilterProcessor.html  struct.DeepFilterStream.html  type.Result.html
examples/: pipelined.rs  process_file.rs  realtime.rs
models/dfn2/: df_dec.onnx  df_dec_streaming.onnx  enc.onnx  enc_conv_streaming.onnx  enc_gru_streaming.onnx  erb_dec.onnx  erb_dec_streaming.onnx
models/dfn2_h0/: df_dec.onnx  df_dec_streaming.onnx  enc.onnx  enc_conv_streaming.onnx  enc_gru_streaming.onnx  erb_dec.onnx  erb_dec_streaming.onnx
models/dfn2_ll/: config.ini  df_dec.onnx  df_dec_streaming.onnx  enc.onnx  enc_conv_streaming.onnx  enc_gru_streaming.onnx  erb_dec.onnx  erb_dec_streaming.onnx
models/dfn3_h0/: enc.onnx  (+6 more)
scripts/: compare_wav.py  export_onnx_stateful.py  merge_onnx.py  merge_split_models.py  patch_onnx_streaming.py  split_encoder_and_patch_decoders.py
src/: lib.rs  rolling.rs
(+23 files in other folders)
